# crab-nebula

./: .gitignore  Cargo.toml  README.md  bluemax.py  bluemax2.py  build.zig  build.zig.zon  docker-compose.yml  pyproject.toml
bots/: bluemax2.py  bluemax_improved.py  ethereal.py  galaxy_image.py  galcon_entities.py  gbotlib.py  lisa.py
bots/legacy/: juyo.py  redmax.py  redmax_lookahead.py  toaster1.py
docs/: bidding-system.md
python/bots/: bayes_heuristic.py  galcon_entities.py  gbotlib.py  knapbot.py
python/bots/legacy/: README
python/matchserv/: main.py  model-versions.txt
rust/galcon/: Cargo.toml
rust/galcon/src/: engine.rs  lib.rs  model.rs
rust/galcon/src/geom/: mod.rs  model.rs
rust/nebula/: Cargo.toml
rust/nebula/src/: main.rs  nebula.rs
scripts/: bayes_generate.py  build_movement_model.py  codegen_geom_model.py  extract_games_from_logs.py  extract_movement_from_games.py  galcon.py  get_norms.py
scripts/model/: params.json
src/: engine.rs  engine.zig  geom.zig  geom_model.zig  main.rs  main.zig  model.rs  proto.rs  proto.zig
src/geom/: mod.rs  model.rs
