[project]
name = "nebula"
version = "0.1.0"
description = "Galcon bot code and scripts for work on nebula"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.38",
    "knapsack>=0.3.1",
    "asyncpg>=0.31.0",
    "glicko2>=2.1.0",
    "requests>=2.34.2",
    "bayesian-optimization>=3.3.0",
]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
